@@ -282,6 +282,7 @@ Changes:
 - Integrate installation / upgrade of makemkv 1.6.5 into setup.sh (only 64)
 - Thanks to chippyash2 english based documentation is finished.
 - Added README.de.linux 
+- Integrate installation / upgrade of makemkv 1.6.6 into setup.sh (only 32)
 
 Fixes:
 
